# faceless-pipeline

./: .gitignore  README.md  START-HERE.txt  Start.bat  Start.command  captions.json  cli.py  config.example.json  diagnose_perth.py  faceless  faceless.bat  install.sh  make_video.py  pyproject.toml  setup.bat  setup.sh  studio.py
lib/: align.py  approve.py  captions.py  chatterbox_engine.py  compose.py  console.py  gemini.py  llm.py  pipeline.py  render.py  sheet.py  sources.py  stock.py  tts.py  ui.html  vision.py  voices.py
music/: README.txt
projects/Testingwith/sheets/: Testingwith_MASTER_production_sheet.md
projects/Voicetestingonmac/sheets/: Voicetestingonmac_ENGLISH_youtube.md  Voicetestingonmac_MASTER_production_sheet.md
sheets/: video03_GERMAN_narration.md  video03_MASTER_production_sheet.md  video04_GERMAN_narration.md  video04_MASTER_production_sheet.md  video04_SPANISH_narration.md  video05_ENGLISH_youtube.md  video05_GERMAN_narration.md  video05_MASTER_production_sheet.md  video05_SPANISH_narration.md
tools/: check_ui.mjs  eval_split.py  install_deps.py  openverse_register.py  openverse_test.py  test_adapters.py  test_audio.py  test_captions.py  test_compose.py  test_layout.py  test_llm.py  test_routing.py  test_scoring.py  test_sourcing.py  test_split.py  test_vision.py
tools/fixtures/: nasa_manifest.json  nasa_search.json  openverse_search.json  smithsonian_search.json  wikimedia_search.json
tools/gold/: split_cases.json
voices_refs/: README.txt
